[gd_scene load_steps=5 format=3 uid="uid://dmhar1o6sqcii"]

[ext_resource type="Texture2D" uid="uid://dbs3gho38gcjf" path="res://assets/textures/UI/Elements-01.png" id="1_vbjho"]
[ext_resource type="Script" uid="uid://b63tu0yvbshug" path="res://game/workshop/item_component.gd" id="2_2d5n0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s0ux8"]
texture = ExtResource("1_vbjho")
texture_margin_left = 61.0
texture_margin_top = 59.0
texture_margin_right = 6.0
texture_margin_bottom = 5.0
region_rect = Rect2(1301, 136, 300, 149)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbjho"]
atlas = ExtResource("1_vbjho")
region = Rect2(1454, 762, 192, 196)

[node name="ItemComponent" type="MarginContainer"]
offset_right = 218.0
offset_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("2_2d5n0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_s0ux8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemPreviewRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(70, 60)
layout_mode = 2
texture = SubResource("AtlasTexture_vbjho")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="ItemPreview" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/ItemPreviewRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
text = "health: 40"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
text = "shield: 30"

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="EquipButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -16.0
offset_right = -27.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
text = "equip"

[node name="UnequipButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.5
offset_top = -16.0
offset_right = -16.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
text = "unequip"

[node name="DiscardButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 16.5
offset_top = -16.0
offset_right = 89.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
text = "discard"

[connection signal="pressed" from="Control/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="Control/UnequipButton" to="." method="_on_unequip_button_pressed"]
[connection signal="pressed" from="Control/DiscardButton" to="." method="_on_discard_button_pressed"]
